--- a/sm.yaml
+++ b/sm.yaml
@@ -1,17 +1,25 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: webapp
+  annotations:
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"monitoring.coreos.com/v1","kind":"ServiceMonitor","metadata":{"annotations":{},"labels":{"name":"containers-my-app","release":"prom"},"name":"webapp","namespace":"default"},"spec":{"endpoints":[{"port":"http"}],"namespaceSelector":{"matchNames":["default"]},"selector":{"matchLabels":{"name":"containers-my-app"}}}}
+  creationTimestamp: "2024-02-19T04:53:22Z"
+  generation: 2
   labels:
     name: containers-my-app
-    release: prom
+    release: test
+  name: webapp
   namespace: default
+  resourceVersion: "36812"
+  uid: d24e726e-47d8-41bb-a8e5-6920963b87c0
 spec:
+  endpoints:
+  - port: http
   namespaceSelector:
     matchNames:
     - default
   selector:
     matchLabels:
       name: containers-my-app
-  endpoints:
-  - port: http
+      release: test
