fixed up yamls and moved to k8s dir

--- a/k8s/s.yaml
+++ b/k8s/s.yaml
@@ -6,7 +6,7 @@ metadata:
     name: containers-my-app
   namespace: default
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - name: http
     port: 80
