--- a/k8s/d.yaml
+++ b/k8s/d.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: ghcr.io/camptocamp/course_docker_backend:python
+        image: 927315517716.dkr.ecr.us-west-2.amazonaws.com/seshsrepo:flask-load-app-v1
         ports:
         - containerPort: 8080
           name: webapp
