--- a/k8s/webapp-service-monitor.yaml
+++ b/k8s/webapp-service-monitor.yaml
@@ -3,8 +3,8 @@ kind: ServiceMonitor
 metadata:
   name: webapp
   labels:
-    name: containers-my-app
-    release: test
+    name: containers-gym-data-tracker-app
+    release: gym-data-tracker
   namespace: default
 spec:
   namespaceSelector:
@@ -14,5 +14,5 @@ spec:
   - port: http
   selector:
     matchLabels:
-      name: containers-my-app
-      release: test
+      name: containers-gym-data-tracker-app
+      release: gym-data-tracker
