--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -2,11 +2,21 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  namespace: default
+  labels:
+    app: mysqld-exporter
+    release: gym-data-tracker
 spec:
   selector:
-    app: mysql
+    app: mysql-server
+    release: gym-data-tracker
   ports:
-    - protocol: TCP
+    - name: mysql
+      protocol: TCP
       port: 3306
       targetPort: 3306
+    - name: metrics
+      protocol: TCP
+      port: 9104
+      targetPort: metrics
   type: ClusterIP
