added starting code for web app

--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -18,5 +18,5 @@ spec:
     - name: metrics
       protocol: TCP
       port: 9104
-      targetPort: metrics
+      targetPort: 9104
   type: ClusterIP
