--- a/k8s/webapp-deployment.yaml
+++ b/k8s/webapp-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: 927315517716.dkr.ecr.us-west-2.amazonaws.com/seshsrepo:gym-data-tracker-app-v3
+        image: 927315517716.dkr.ecr.us-west-2.amazonaws.com/seshsrepo:gym-data-tracker-app-v${VERSION}
         ports:
         - containerPort: 8080
           name: webapp
