added improvements in updating the chart

--- a/k8s/webapp-deployment.yaml
+++ b/k8s/webapp-deployment.yaml
@@ -30,5 +30,7 @@ spec:
               key: password
         - name: MYSQL_SERVICE_HOST
           value: "mysql-service.default.svc.cluster.local"
+        - name: MYSQL_SERVICE_PORT
+          value: "3306"
         - name: MYSQL_DATABASE
           value: "gymdata"
